fix(VListItemAvatar): use proper spacing to line-up title text

--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -98,7 +98,7 @@
 
 .v-list-item__avatar
   &:first-child
-    margin-right: 16px
+    margin-right: 24px
 
   &:last-child:not(:only-child)
     margin-left: 16px
